syntax = "proto3";

package edge_cases;

enum TinyEnum {
  TINY_ZERO = 0;
  TINY_ONE = 1;
}

enum LargeEnum {
  VALUE_0 = 0;
  VALUE_1 = 1;
  VALUE_2 = 2;
  VALUE_3 = 3;
  VALUE_4 = 4;
  VALUE_5 = 5;
  VALUE_6 = 6;
  VALUE_7 = 7;
  VALUE_8 = 8;
  VALUE_9 = 9;
  VALUE_10 = 10;
  VALUE_11 = 11;
  VALUE_12 = 12;
  VALUE_13 = 13;
  VALUE_14 = 14;
  VALUE_15 = 15;
  VALUE_16 = 16;
  VALUE_17 = 17;
  VALUE_18 = 18;
  VALUE_19 = 19;
  VALUE_20 = 20;
  VALUE_21 = 21;
  VALUE_22 = 22;
  VALUE_23 = 23;
  VALUE_24 = 24;
  VALUE_25 = 25;
  VALUE_26 = 26;
  VALUE_27 = 27;
  VALUE_28 = 28;
  VALUE_29 = 29;
  VALUE_30 = 30;
  VALUE_31 = 31;
  VALUE_32 = 32;
  VALUE_33 = 33;
  VALUE_34 = 34;
  VALUE_35 = 35;
  VALUE_36 = 36;
  VALUE_37 = 37;
  VALUE_38 = 38;
  VALUE_39 = 39;
  VALUE_40 = 40;
  VALUE_41 = 41;
  VALUE_42 = 42;
  VALUE_43 = 43;
  VALUE_44 = 44;
  VALUE_45 = 45;
  VALUE_46 = 46;
  VALUE_47 = 47;
  VALUE_48 = 48;
  VALUE_49 = 49;
  VALUE_50 = 50;
  VALUE_51 = 51;
  VALUE_52 = 52;
  VALUE_53 = 53;
  VALUE_54 = 54;
  VALUE_55 = 55;
  VALUE_56 = 56;
  VALUE_57 = 57;
  VALUE_58 = 58;
  VALUE_59 = 59;
  VALUE_60 = 60;
  VALUE_61 = 61;
  VALUE_62 = 62;
  VALUE_63 = 63;
  VALUE_64 = 64;
  VALUE_65 = 65;
  VALUE_66 = 66;
  VALUE_67 = 67;
  VALUE_68 = 68;
  VALUE_69 = 69;
  VALUE_70 = 70;
  VALUE_71 = 71;
  VALUE_72 = 72;
  VALUE_73 = 73;
  VALUE_74 = 74;
  VALUE_75 = 75;
  VALUE_76 = 76;
  VALUE_77 = 77;
  VALUE_78 = 78;
  VALUE_79 = 79;
  VALUE_80 = 80;
  VALUE_81 = 81;
  VALUE_82 = 82;
  VALUE_83 = 83;
  VALUE_84 = 84;
  VALUE_85 = 85;
  VALUE_86 = 86;
  VALUE_87 = 87;
  VALUE_88 = 88;
  VALUE_89 = 89;
  VALUE_90 = 90;
  VALUE_91 = 91;
  VALUE_92 = 92;
  VALUE_93 = 93;
  VALUE_94 = 94;
  VALUE_95 = 95;
  VALUE_96 = 96;
  VALUE_97 = 97;
  VALUE_98 = 98;
  VALUE_99 = 99;
  VALUE_100 = 100;
  VALUE_101 = 101;
  VALUE_102 = 102;
  VALUE_103 = 103;
  VALUE_104 = 104;
  VALUE_105 = 105;
  VALUE_106 = 106;
  VALUE_107 = 107;
  VALUE_108 = 108;
  VALUE_109 = 109;
  VALUE_110 = 110;
}

message Level10 {
  string value = 1;
  int32 number = 2;
}

message Level9 {
  string value = 1;
  Level10 nested = 2;
}

message Level8 {
  string value = 1;
  Level9 nested = 2;
}

message Level7 {
  string value = 1;
  Level8 nested = 2;
}

message Level6 {
  string value = 1;
  Level7 nested = 2;
}

message Level5 {
  string value = 1;
  Level6 nested = 2;
}

message Level4 {
  string value = 1;
  Level5 nested = 2;
}

message Level3 {
  string value = 1;
  Level4 nested = 2;
}

message Level2 {
  string value = 1;
  Level3 nested = 2;
}

message Level1 {
  string value = 1;
  Level2 nested = 2;
}

message IntegerLimits {
  int32 int32_min = 1;
  int32 int32_max = 2;
  uint32 uint32_min = 3;
  uint32 uint32_max = 4;
  int64 int64_min = 5;
  int64 int64_max = 6;
  uint64 uint64_min = 7;
  uint64 uint64_max = 8;
  sint32 sint32_min = 9;
  sint32 sint32_max = 10;
  sint64 sint64_min = 11;
  sint64 sint64_max = 12;
  fixed32 fixed32_min = 13;
  fixed32 fixed32_max = 14;
  fixed64 fixed64_min = 15;
  fixed64 fixed64_max = 16;
  sfixed32 sfixed32_min = 17;
  sfixed32 sfixed32_max = 18;
  sfixed64 sfixed64_min = 19;
  sfixed64 sfixed64_max = 20;
}

message FloatEdgeCases {
  float zero = 1;
  float negative_zero = 2;
  float infinity = 3;
  float negative_infinity = 4;
  float nan = 5;
  float min_positive = 6;
  float max_value = 7;
  float min_value = 8;
  double d_zero = 9;
  double d_negative_zero = 10;
  double d_infinity = 11;
  double d_negative_infinity = 12;
  double d_nan = 13;
  double d_min_positive = 14;
  double d_max_value = 15;
  double d_min_value = 16;
}

message StringSizes {
  string empty = 1;
  string small_255 = 2;
  string medium_1024 = 3;
  string large_4096 = 4;
}

message ArraySizes {
  repeated int32 empty_array = 1;
  repeated int32 small_array = 2;
  repeated int32 medium_array = 3;
  repeated int32 large_array = 4;
}

message BooleanOnly {
  bool flag1 = 1;
  bool flag2 = 2;
  bool flag3 = 3;
  bool flag4 = 4;
  bool flag5 = 5;
  bool flag6 = 6;
  bool flag7 = 7;
  bool flag8 = 8;
}

message EnumOnly {
  TinyEnum e1 = 1;
  TinyEnum e2 = 2;
  TinyEnum e3 = 3;
  TinyEnum e4 = 4;
  TinyEnum e5 = 5;
  LargeEnum le1 = 6;
  LargeEnum le2 = 7;
  LargeEnum le3 = 8;
}

message ManyFields {
  int32 f1 = 1;
  int32 f2 = 2;
  int32 f3 = 3;
  int32 f4 = 4;
  int32 f5 = 5;
  int32 f6 = 6;
  int32 f7 = 7;
  int32 f8 = 8;
  int32 f9 = 9;
  int32 f10 = 10;
  int32 f11 = 11;
  int32 f12 = 12;
  int32 f13 = 13;
  int32 f14 = 14;
  int32 f15 = 15;
  int32 f16 = 16;
  int32 f17 = 17;
  int32 f18 = 18;
  int32 f19 = 19;
  int32 f20 = 20;
  int32 f21 = 21;
  int32 f22 = 22;
  int32 f23 = 23;
  int32 f24 = 24;
  int32 f25 = 25;
  int32 f26 = 26;
  int32 f27 = 27;
  int32 f28 = 28;
  int32 f29 = 29;
  int32 f30 = 30;
  int32 f31 = 31;
  int32 f32 = 32;
  int32 f33 = 33;
  int32 f34 = 34;
  int32 f35 = 35;
  int32 f36 = 36;
  int32 f37 = 37;
  int32 f38 = 38;
  int32 f39 = 39;
  int32 f40 = 40;
  int32 f41 = 41;
  int32 f42 = 42;
  int32 f43 = 43;
  int32 f44 = 44;
  int32 f45 = 45;
  int32 f46 = 46;
  int32 f47 = 47;
  int32 f48 = 48;
  int32 f49 = 49;
  int32 f50 = 50;
  int32 f51 = 51;
  int32 f52 = 52;
  int32 f53 = 53;
  int32 f54 = 54;
  int32 f55 = 55;
}

message AllTypes {
  int32 int32_field = 1;
  int64 int64_field = 2;
  uint32 uint32_field = 3;
  uint64 uint64_field = 4;
  sint32 sint32_field = 5;
  sint64 sint64_field = 6;
  fixed32 fixed32_field = 7;
  fixed64 fixed64_field = 8;
  sfixed32 sfixed32_field = 9;
  sfixed64 sfixed64_field = 10;
  float float_field = 11;
  double double_field = 12;
  bool bool_field = 13;
  string string_field = 14;
  TinyEnum enum_field = 15;
  Level10 nested_field = 16;
  repeated int32 repeated_int = 17;
  repeated string repeated_string = 18;
  repeated Level10 repeated_nested = 19;
}

message EmptyMessage {
}

message SingleField {
  string value = 1;
}
